<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathQuestionTwo">

    <TextView
        android:id="@+id/question_two_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/math_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_two_text"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/math_option_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40" />

        <RadioButton
            android:id="@+id/math_option_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_75" />

        <RadioButton
            android:id="@+id/math_option_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_23" />

        <RadioButton
            android:id="@+id/math_option_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8" />
    </RadioGroup>

    <Button
        android:id="@+id/math_second_question_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math_radio_group"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>