<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarvelQuestionTwo">

    <TextView
        android:id="@+id/marvel_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="356dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marvel_question_text"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/marvel_option_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thor" />

        <RadioButton
            android:id="@+id/marvel_option_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hulk" />

        <RadioButton
            android:id="@+id/marvel_option_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spiderman" />

        <RadioButton
            android:id="@+id/marvel_option_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iron_man" />
    </RadioGroup>

    <Button
        android:id="@+id/marvel_question_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>