<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhysicsQuestionOne">

    <TextView
        android:id="@+id/physics_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/physics_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/physics_question_text"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/physics_option_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/because_helium_is_much_lighter_than_air" />

        <RadioButton
            android:id="@+id/physics_option_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/because_it_was_decided_by_the_universe" />

        <RadioButton
            android:id="@+id/physics_option_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/because_balloons_were_invented_by_aliens" />

        <RadioButton
            android:id="@+id/physics_option_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/because_air_is_lighter_than_helium" />
    </RadioGroup>

    <Button
        android:id="@+id/physics_first_question_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/physics_radio_group"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>